// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "description": "View transaction 0x12345 on Atleta Network (Atleta) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Atleta Network transaction 0x12345 | Atlascan",
  },
  "title": "Atleta Network transaction 0x12345 | Atlascan",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "description": "0x12345, balances and analytics on the Atleta Network (Atleta) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Atleta Network USDT token details | Atlascan",
  },
  "title": "Atleta Network USDT token details | Atlascan",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "description": "Blockscout is the #1 open-source blockchain explorer available today. 100+ chains and counting rely on Blockscout data availability, APIs, and ecosystem tools to support their networks.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost/static/og_placeholder.png",
    "title": "Atleta Network blocks | Atlascan",
  },
  "title": "Atleta Network blocks | Atlascan",
}
`;
